--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Wireframe</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="header">header</div>
+    <br>
+
+    <div>
+        <nav class="nav">nav</nav>
+    </div>
     
+    <section class="section">section
+
+            <div>
+                <div class="article">article</div>
+
+                <strong><article class="headertags">h1, h2, h3</article></strong>
+
+                <article class="p">p</article>
+            </div>
+
+    </section>
+
+        <div class="aside">aside</div>
+
+        <footer>footer</footer>
+    </div>
+
 </body>
+
 </html>
